unpackaged/main/default/objects/Clave_de_Inventario__c/Clave_de_Inventario__c.object-meta.xml
<CustomObject>
    <label>Clave de Inventario</label>
    <nameField>
        <displayFormat>CVEINV-{000000}</displayFormat>
        <label>Clave de Inventario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claves de Inventario</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>