unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Anterior_Actual__c.field-meta.xml
<CustomField>
    <fullName>Anterior_Actual__c</fullName>
    <description>Campo de ayuda para mostrar en la lista relacionada en Inventarios.</description>
    <formula>TEXT( Conteo_Anterior_Total__c ) + &#39; - &#39; + TEXT( Conteo_Actual_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anterior - Actual</label>
    <type>Text</type>
</CustomField>