unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <description>Medicamento/Material de Curación.</description>
    <formula>TEXT(Producto__r.Simple_Classification__c)</formula>
    <label>Clasificación</label>
    <type>Text</type>
</CustomField>