unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Codigo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto__c</fullName>
    <formula>Producto__r.Product_Code_ID__c</formula>
    <label>Codigo de Producto</label>
    <type>Text</type>
</CustomField>