unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Conteo_Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Actual_Total__c</fullName>
    <description>Cantidad actual total del producto por Insumo.</description>
    <label>Conteo Actual Total</label>
    <summarizedField>Lote_de_Inventario__c.Conteo_Actual__c</summarizedField>
    <summaryForeignKey>Lote_de_Inventario__c.Clave_de_Inventario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>