unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Conteo_Anterior_Total__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Anterior_Total__c</fullName>
    <description>Cantidad anterior total del producto por Insumo.</description>
    <label>Conteo Anterior Total</label>
    <summarizedField>Lote_de_Inventario__c.Conteo_Anterior__c</summarizedField>
    <summaryForeignKey>Lote_de_Inventario__c.Clave_de_Inventario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>