unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Estatus_de_Conteo__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Conteo__c</fullName>
    <description>Estatus del conteo del día.</description>
    <label>Estatus de Conteo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iniciado</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>