unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Fecha_Inicio_Conteo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Conteo__c</fullName>
    <description>Fecha en que inicia el conteo del día.</description>
    <label>Fecha Inicio Conteo</label>
    <type>Date</type>
</CustomField>