unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Inventario__c.field-meta.xml
<CustomField>
    <fullName>Inventario__c</fullName>
    <label>Inventario</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Claves de Inventario</relationshipLabel>
    <relationshipName>Claves_de_Inventario</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>