unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Nombre_UMU__c.field-meta.xml
<CustomField>
    <fullName>Nombre_UMU__c</fullName>
    <description>Nombre de la UMU almacenado en objeto relacionado Inventario</description>
    <formula>Inventario__r.Nombre_UMU__c</formula>
    <label>Nombre UMU</label>
    <type>Text</type>
</CustomField>