unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Numero_Total_de_Lotes__c.field-meta.xml
<CustomField>
    <fullName>Numero_Total_de_Lotes__c</fullName>
    <description>Contiene el numero de lotes que hay para la clave de insumo.</description>
    <label>Numero Total de Lotes</label>
    <summaryForeignKey>Lote_de_Inventario__c.Clave_de_Inventario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>