unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Claves de Inventario</relationshipLabel>
    <relationshipName>Claves_de_Inventario</relationshipName>
    <type>Lookup</type>
</CustomField>