unpackaged/main/default/objects/Clave_de_Inventario__c/fields/Tipo_de_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Insumo__c</fullName>
    <description>Tipo de Insumo para inventarios. Ordinario, Programa, Vacunas, Compra local.</description>
    <formula>TEXT( Producto__r.Programa__r.Inventario__c )</formula>
    <label>Tipo de Insumo</label>
    <type>Text</type>
</CustomField>