unpackaged/main/default/objects/Clave_de_Inventario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Nombre_UMU__c</columns>
    <columns>Codigo_de_Producto__c</columns>
    <columns>Producto__c</columns>
    <columns>Conteo_Actual_Total__c</columns>
    <columns>Conteo_Anterior_Total__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>